--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+  
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +16,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CallNotifier"
         tools:targetApi="31">
+
+        <service android:name=".services.CallNotificationService"
+		 android:permission="android.permission.BIND_SCREENING_SERVICE"
+		 android:exported="true">
+	  <intent-filter>
+            <action android:name="android.telecom.CallScreeningService"/>
+	  </intent-filter>
+	</service>      
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
