--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ activityCompose = "1.8.0"
 composeBom = "2024.04.01"
 javamail = "2.1.5"
 constraintlayout = "2.2.1"
+settings = "1.2.1"
+fragment = "1.8.9"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -27,6 +29,9 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+androidx-settings = { group = "androidx.preference", name = "preference-ktx", version.ref = "settings" }
+androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment"}
+
 javamail = { group = "jakarta.mail", name = "jakarta.mail-api", version.ref = "javamail" }
 
 [plugins]
