--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,10 +8,10 @@ espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.8.0"
 composeBom = "2024.04.01"
-javamail = "2.1.5"
 constraintlayout = "2.2.1"
 settings = "1.2.1"
 fragment = "1.8.9"
+javamail = "2.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,7 +32,7 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-settings = { group = "androidx.preference", name = "preference-ktx", version.ref = "settings" }
 androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment"}
 
-javamail = { group = "jakarta.mail", name = "jakarta.mail-api", version.ref = "javamail" }
+javamail = { group = "com.sun.mail", name = "jakarta.mail", version.ref = "javamail" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
