--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,18 +28,18 @@ jobs:
       #1     
        - name: Decode Keystore
          env:
+           # Encode using base64 app/keystore.jks  | tr -d '\012'; echo
            ENCODED_STRING: ${{ secrets.SIGNING_KEY_STORE_BASE64 }}
            SIGNING_KEY_STORE_PATH: keystore.jks
  
          run: |
            echo "$ENCODED_STRING" > keystore-b64.txt
-           base64 -d keystore-b64.txt > $SIGNING_KEY_STORE_PATH
            base64 -d keystore-b64.txt > app/$SIGNING_KEY_STORE_PATH
            
        #2
        - name: Build Release apk
          env:
-           SIGNING_KEY_STORE_PATH: ${{ secrets.SIGNING_KEY_STORE_PATH }}
+           SIGNING_KEY_STORE_PATH: keystore.jks
            SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
            SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
            SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
