--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,7 +35,11 @@ jobs:
          run: |
            echo "$ENCODED_STRING" > keystore-b64.txt
            base64 -d keystore-b64.txt > app/$SIGNING_KEY_STORE_PATH
+           echo Env:
            printenv
+           echo shell:
+           set
+           echo End shell
            echo done printenv
            basename ${GITHUB_REPOSITORY}
            echo bktip `basename ${GITHUB_REPOSITORY}`
@@ -52,11 +56,7 @@ jobs:
        #3
        - name: Rename apk
          run: |
-           printenv
-           echo done printenv
-           basename ${GITHUB_REPOSITORY}
-           echo bktip `basename ${GITHUB_REPOSITORY}`
-           mv app/build/outputs/apk/release/app-release.apk app/build/outputs/apk/release/`basename ${GITHUB_REPOSITORY}`_${GITHUB_REF_NAME}.apk
+           mv -v app/build/outputs/apk/release/app-release.apk app/build/outputs/apk/release/`basename ${GITHUB_REPOSITORY}`_${GITHUB_REF_NAME}.apk
        #4
        - name: Upload Release Build to Artifacts
          uses: actions/upload-artifact@v4
@@ -69,4 +69,4 @@ jobs:
          with:
            generate_release_notes: true
            files: |
-             app/build/outputs/apk/release/`basename ${GITHUB_REPOSITORY}`_*.apk
+             app/build/outputs/apk/release/*_*.apk
